<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.ul.miage.bipwac</groupId>
	<artifactId>gl.metro</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Application de recherche de graphe sur le Métro Parisien</name>
	<description>Application donnant un trajet optimal d'un point à un autre dans la périphérie de Paris en fonction de certains critères.</description>

<properties>
		<!-- Le code source en UTF8 -->
		<project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
		<!-- 0U stocker la distribution binaire -->
		<project.bindist.dir>${project.basedir}/bindist</project.bindist.dir>
		<!-- Nom de la classe principale -->
		<project.main.classname>${project.groupId}.${project.artifactId}.Launcher</project.main.classname>
		<!-- Nom du script a éxecuter (bindist) -->
		<project.bin.appname>run</project.bin.appname>
		<!-- Propriété de création du README.txt -->
        <commons.componentid>chain</commons.componentid>
        <commons.release.version>1.4</commons.release.version>
    </properties>

	<dependencies>
		<!-- Importation des méthodes JSON google ou GSON -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
		<!-- Importations pour getCityByName() et getMeteoByCity() -->
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.annotation</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-client</artifactId>
			<version>2.38</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>2.28</version>
		</dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
		<!-- Dépendance pour les classes de la bibliothèque standard Java -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>3.8.4</version>
		</dependency>
		<!-- Dépendance pour la bibliothèque Java Collections Framework -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.8.4</version>
		</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<!-- create scripts for apps -->
				<!-- mvn package | appassembler:assemble -->
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>1.10</version>
				<configuration>
					<assembleDirectory>${project.bindist.dir}</assembleDirectory>
					<programs>
						<program>
							<mainClass>${project.main.classname}</mainClass>
							<id>${project.bin.appname}</id>
						</program>
					</programs>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- create a distribution archive -->
				<!-- mvn install ou assembly:single -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>make-zip</id>
						<phase>install</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>zip.xml</descriptor>
							</descriptors>
							<appendAssemblyId>true</appendAssemblyId>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>